# gstreamer_tutorial_exercises

./: README.md
Basic_tutorial/: .gitignore
Basic_tutorial/basic-tutorial-1/: CMakeLists.txt  README.md
Basic_tutorial/basic-tutorial-1/src/: CMakeLists.txt  main.cpp
Basic_tutorial/basic-tutorial-1/src/exceptions/: LogMsgCreator.hpp
Basic_tutorial/basic-tutorial-1/src/gstreamer/: GStreamerLauncher.cpp  GStreamerLauncher.hpp
Basic_tutorial/basic-tutorial-2/: CMakeLists.txt  README.md
Basic_tutorial/basic-tutorial-2/src/: CMakeLists.txt  main.cpp
Basic_tutorial/basic-tutorial-2/src/exceptions/: CannotBuildPipeline.hpp  CannotCreateFilter.hpp  CannotCreateMessage.hpp  CannotCreatePipeline.hpp  CannotCreateSink.hpp  CannotCreateSource.hpp  CannotGetBus.hpp  CannotSetPlayState.hpp  CriticalError.hpp  LogMsgCreator.cpp  MessageError.hpp  UnexpectedMessage.hpp
Basic_tutorial/basic-tutorial-2/src/gstreamer/: GStreamerBus.cpp  GStreamerBus.hpp  GStreamerDeleter.cpp  GStreamerDeleter.hpp  GStreamerElementIfc.hpp  GStreamerFilter.cpp  GStreamerFilter.hpp  GStreamerLauncher.cpp  GStreamerLauncher.hpp  GStreamerMessage.cpp  GStreamerMessage.hpp  GStreamerPipeline.cpp  GStreamerPipeline.hpp  GStreamerSink.cpp  GStreamerSink.hpp  GStreamerSource.cpp  GStreamerSource.hpp
Basic_tutorial/basic-tutorial-2/src/gstreamer/handlers/: MsgHandleEos.cpp  MsgHandleEos.hpp  MsgHandleError.cpp  MsgHandleError.hpp  MsgHandleFactory.cpp  MsgHandleIfc.hpp
Basic_tutorial/basic-tutorial-3/: CMakeLists.txt  README.md
Basic_tutorial/basic-tutorial-3/src/: CMakeLists.txt  main.cpp
Basic_tutorial/basic-tutorial-3/src/exceptions/: LogMsgCreator.hpp
Basic_tutorial/basic-tutorial-3/src/gstreamer/: GStreamerBus.cpp  GStreamerBus.hpp  GStreamerDeleter.cpp  GStreamerDeleter.hpp  GStreamerDynamicPipeline.cpp  GStreamerDynamicPipeline.hpp  GStreamerElement.cpp  GStreamerElement.hpp  GStreamerLauncher.cpp  GStreamerLauncher.hpp  GStreamerMessage.cpp  GStreamerPadAdd.cpp  GStreamerPadAdd.hpp
Basic_tutorial/basic-tutorial-3/src/gstreamer/handlers/: MsgHandleError.cpp  MsgHandleError.hpp  MsgHandleFactory.hpp
Basic_tutorial/basic-tutorial-3/src/helpers/: GstElementFinder.cpp  GstElementFinder.hpp
